--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.1.3",
     "axios": "^0.19.2",
     "jquery": "^3.5.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.13.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.0",
+    "react-loader": "^2.4.7",
+    "react-loader-spinner": "^3.1.14",
+    "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-select": "^3.1.0",
     "react-tilt": "^0.1.4"
   },
   "scripts": {
